--- a/docs/config.json
+++ b/docs/config.json
@@ -1,30 +1,479 @@
 {
   "расписание": {
+    "Горяева Л. Г.": {
+      "вторник": {
+        "4": {
+          "предмет": "информатика (практика)",
+          "класс": "9б",
+          "кабинет": ""
+        },
+        "5": {
+          "предмет": "информатика (практика)",
+          "класс": "10а",
+          "кабинет": ""
+        },
+        "6": {
+          "предмет": "информатика (практика)",
+          "класс": "9в",
+          "кабинет": ""
+        },
+        "7": {
+          "предмет": "информатика (практика)",
+          "класс": "9а",
+          "кабинет": ""
+        }
+      },
+      "четверг": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "9в",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "10в",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (практика)",
+          "класс": "10в",
+          "кабинет": ""
+        }
+      },
+      "суббота": {
+        "1": {
+          "предмет": "информатика (теория)",
+          "класс": "9а",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (теория)",
+          "класс": "10а",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (теория)",
+          "класс": "9б",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (теория)",
+          "класс": "10в",
+          "кабинет": ""
+        },
+        "5": {
+          "предмет": "информатика (теория)",
+          "класс": "10а",
+          "кабинет": ""
+        },
+        "6": {
+          "предмет": "информатика (теория)",
+          "класс": "10в",
+          "кабинет": ""
+        }
+      }
+    },
+    "Нагибин С. С.": {
+      "понедельник": {
+        "6": {
+          "предмет": "труд",
+          "класс": "7б",
+          "кабинет": ""
+        },
+        "7": {
+          "предмет": "труд",
+          "класс": "7а",
+          "кабинет": ""
+        }
+      },
+      "вторник": {
+        "1": {
+          "предмет": "труд",
+          "класс": "8а",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "труд",
+          "класс": "8б",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "труд",
+          "класс": "8в",
+          "кабинет": ""
+        }
+      },
+      "суббота": {
+        "2": {
+          "предмет": "труд",
+          "класс": "8в",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "труд",
+          "класс": "8б",
+          "кабинет": ""
+        },
+        "5": {
+          "предмет": "труд",
+          "класс": "7а",
+          "кабинет": ""
+        },
+        "6": {
+          "предмет": "труд",
+          "класс": "8а",
+          "кабинет": ""
+        },
+        "7": {
+          "предмет": "труд",
+          "класс": "7б",
+          "кабинет": ""
+        }
+      }
+    },
+    "Поляков В. В.": {
+      "понедельник": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "10б",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (практика)",
+          "класс": "10б",
+          "кабинет": ""
+        }
+      },
+      "вторник": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (теория)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "11а",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (теория)",
+          "класс": "11а",
+          "кабинет": ""
+        }
+      },
+      "среда": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "11в",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (практика)",
+          "класс": "11в",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "11а",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (практика)",
+          "класс": "11а",
+          "кабинет": ""
+        }
+      },
+      "четверг": {
+        "1": {
+          "предмет": "информатика (теория)",
+          "класс": "10б",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (теория)",
+          "класс": "10б",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "10в",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (практика)",
+          "класс": "10в",
+          "кабинет": ""
+        }
+      },
+      "суббота": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (теория)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "11в",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (теория)",
+          "класс": "11в",
+          "кабинет": ""
+        }
+      }
+    },
+    "Савчук И. В.": {
+      "понедельник": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "10б",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (практика)",
+          "класс": "10б",
+          "кабинет": ""
+        },
+        "6": {
+          "предмет": "труд",
+          "класс": "7б",
+          "кабинет": ""
+        },
+        "7": {
+          "предмет": "труд",
+          "класс": "7а",
+          "кабинет": ""
+        }
+      },
+      "вторник": {
+        "1": {
+          "предмет": "труд",
+          "класс": "8а",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "труд",
+          "класс": "8б",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "труд",
+          "класс": "8в",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (практика)",
+          "класс": "9б",
+          "кабинет": ""
+        },
+        "5": {
+          "предмет": "информатика (практика)",
+          "класс": "10а",
+          "кабинет": ""
+        },
+        "6": {
+          "предмет": "информатика (практика)",
+          "класс": "9в",
+          "кабинет": ""
+        },
+        "7": {
+          "предмет": "информатика (практика)",
+          "класс": "9а",
+          "кабинет": ""
+        }
+      },
+      "четверг": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "9в",
+          "кабинет": ""
+        }
+      },
+      "суббота": {
+        "1": {
+          "предмет": "информатика (теория)",
+          "класс": "9а",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "труд",
+          "класс": "8в",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (теория)",
+          "класс": "9б",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "труд",
+          "класс": "8б",
+          "кабинет": ""
+        },
+        "5": {
+          "предмет": "труд",
+          "класс": "7а",
+          "кабинет": ""
+        },
+        "6": {
+          "предмет": "труд",
+          "класс": "8а",
+          "кабинет": ""
+        },
+        "7": {
+          "предмет": "труд",
+          "класс": "7б",
+          "кабинет": ""
+        }
+      }
+    },
+    "Шимановская М. В.": {
+      "вторник": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (теория)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "11а",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (теория)",
+          "класс": "11а",
+          "кабинет": ""
+        }
+      },
+      "среда": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "11в",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (практика)",
+          "класс": "11в",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "11а",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (практика)",
+          "класс": "11а",
+          "кабинет": ""
+        }
+      },
+      "суббота": {
+        "1": {
+          "предмет": "информатика (практика)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "2": {
+          "предмет": "информатика (теория)",
+          "класс": "11б",
+          "кабинет": ""
+        },
+        "3": {
+          "предмет": "информатика (практика)",
+          "класс": "11в",
+          "кабинет": ""
+        },
+        "4": {
+          "предмет": "информатика (теория)",
+          "класс": "11в",
+          "кабинет": ""
+        }
+      }
+    }
+  },
+  "звонки": {
     "понедельник": {
       "начало": "9:30",
-      "перемены": [10, 20, 20, 10, 10, 10]
+      "перемены": [
+        10,
+        20,
+        20,
+        10,
+        10,
+        10
+      ]
     },
     "вторник": {
       "начало": "9:00",
-      "перемены": [10, 10, 20, 20, 10, 10]
+      "перемены": [
+        10,
+        10,
+        20,
+        20,
+        10,
+        10
+      ]
     },
     "среда": {
       "начало": "9:00",
-      "перемены": [10, 10, 20, 20, 10, 10]
+      "перемены": [
+        10,
+        10,
+        20,
+        20,
+        10,
+        10
+      ]
     },
     "четверг": {
       "начало": "9:30",
-      "перемены": [10, 20, 20, 10, 10, 10]
+      "перемены": [
+        10,
+        20,
+        20,
+        10,
+        10,
+        10
+      ]
     },
     "пятница": {
       "начало": "9:00",
-      "перемены": [10, 10, 20, 20, 10, 10]
+      "перемены": [
+        10,
+        10,
+        20,
+        20,
+        10,
+        10
+      ]
     },
     "суббота": {
       "начало": "8:30",
-      "перемены": [10, 10, 20, 20, 10, 10]
+      "перемены": [
+        10,
+        10,
+        20,
+        20,
+        10,
+        10
+      ]
     }
   },
-  "урок": 45,
-  "звонок": 5000
+  "урок": 45
 }
